force-app/main/default/objects/ContentVersion/fields/APT_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Template_Name__c</fullName>
    <description>Template name from which the content version is generated</description>
    <label>Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>