force-app/main/default/objects/ContentVersion/fields/CEPARC__Created_By__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By when picked up by the DataArchiva App</description>
    <inlineHelpText>Created By when picked up by the DataArchiva App</inlineHelpText>
    <label>Created By (Before Archival)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Content_Versions_Created</relationshipName>
    <type>Lookup</type>
</CustomField>