force-app/main/default/objects/ContentVersion/fields/CEPARC__Is_Attachment__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Is_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that it was originally an attachment before archival</description>
    <inlineHelpText>Indicates that it was originally an attachment before archival</inlineHelpText>
    <label>Is Attachment</label>
    <type>Checkbox</type>
</CustomField>