force-app/main/default/objects/ContentVersion/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <description>Defines the date of the document where record type is Report</description>
    <inlineHelpText>Defines the date of the document where record type is Report</inlineHelpText>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>