force-app/main/default/objects/ContentVersion/fields/Document_Interval__c.field-meta.xml
<CustomField>
    <fullName>Document_Interval__c</fullName>
    <description>Defines the interval value of a document where the record type is Report.</description>
    <inlineHelpText>Defines the interval value of a document where the record type is Report.</inlineHelpText>
    <label>Document Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>