force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Deed of Variation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Other supporting document</fullName>
            </value>
            <value>
                <fullName>Uprate Letter</fullName>
            </value>
            <value>
                <fullName>DIFOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>