force-app/main/default/objects/ContentVersion/fields/Is_Signed__c.field-meta.xml
<CustomField>
    <fullName>Is_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field id used to differentiate between Signed Documents and Unsigned Documents</description>
    <label>Is Signed</label>
    <type>Checkbox</type>
</CustomField>