force-app/main/default/objects/ContentVersion/fields/Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>Signature_Type__c</fullName>
    <label>Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Analog</fullName>
                <isActive>false</isActive>
                <label>Analog</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <isActive>false</isActive>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>