force-app/main/default/objects/ContentVersion/recordTypes/Report.recordType-meta.xml
<RecordType>
    <fullName>Report</fullName>
    <active>true</active>
    <description>Downloadable reports</description>
    <label>Report</label>
</RecordType>