force-app/main/default/objects/ContentVersion/recordTypes/StarTrack_Default.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_Default</fullName>
    <active>true</active>
    <label>StarTrack Default</label>
</RecordType>